--- a/DFT-ML-GA.ipynb
+++ b/DFT-ML-GA.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Description\n",
+    "\n",
+    "This project uses a combination of high-throughput density functional theory (DFT) data and experimental data on halide perovskite alloys to train predictive machine learning (ML) models using a variety of regression algorithms for properties of interest and perform multi-objective inverse design using genetic algorithm (GA).\n",
+    "\n",
+    "DFT calculations are performed at two levels of theory: GGA-PBE (referred to as PBE henceforth) and HSE06 (referred to as HSE henceforth), leading to a DFT dataset of ~ 800 points. Three properties are computed: the decomposition energy (in eV per formula unit), the band gap (in eV), and the spectroscopic limited maximum efficiency (SLME, in fraction, indicating a theoretical limit for photovoltaic power conversion efficiency). Experimental data (band gap and PV efficiency) for around 100 points, collected from the literature, are further added to the dataset.  Every data point or compound is identified using an Index and a Formula. Two types of input descriptors are defined (to be used for training input -> output predictive models): a composition vector (14 dim) and a elemental properties vector (36 dim); one-hot encoded vectors representing the perovskite phase (cubic, tetragonal, orthorhombic, or hexagonal) and the source of data (PBE, HSE, Expt) are further added as descriptors. The data are divided into 4 types: PBE only, HSE only, PBE+HSE, and PBE+HSE+Expt.\n",
+    "\n",
+    "This notebook calls relevant python packages, reads the DFT and/or experimental data, performs data visualization, and then has different sections for a variety of ML treatments including Pearson coefficients of linear correlation between descriptors and properties followed by regression models using elasticnet regression, random forest regression, and kernel ridge regression, and finally genetic algorithm to design novel perovskites with targeted properties.\n",
+    "\n",
+    "To learn more, contact Arun Mannodi Kanakkithodi (amannodi@purdue.edu) or Jiaqi Yang (yang1494@purdue.edu).\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The overall goal of this project is to learn from a multi-fidelity dataset (properties from DFT-PBE, DFT-HSE, and Experiment) of halide perovskite alloys in a variety of prototypical phases, and obtain predictive models for multiple properties at different fidelities. Best models are subsequently used for large-scale prediction and inverse design.\n",
+    "\n",
+    "The main part of the tutorial begins here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
